
# This file is part of p4est.
# Makefile.am in example/circle
# included non-recursively from toplevel directory

if P4EST_ENABLE_BUILD_2D
bin_PROGRAMS += example/circle/p4est_circle
example_circle_p4est_circle_SOURCES = example/circle/circle.c

LINT_CSOURCES += $(example_circle_p4est_circle_SOURCES)
endif
