
# This file is part of p4est.
# Makefile.am in example/delaunay
# included non-recursively from toplevel directory

if P4EST_ENABLE_BUILD_2D
bin_PROGRAMS += example/delaunay/p4est_delaunay
example_delaunay_p4est_delaunay_SOURCES = example/delaunay/delaunay2.c
endif

if P4EST_ENABLE_BUILD_3D
bin_PROGRAMS += example/delaunay/p8est_delaunay
example_delaunay_p8est_delaunay_SOURCES = example/delaunay/delaunay3.c
endif
