
# This file is part of the p4est library
# Makefile.am in example/geometry
# included non-recursively from toplevel directory

if P4EST_BUILD_3D
bin_PROGRAMS += example/geometry/p8est_geometry
example_geometry_p8est_geometry_SOURCES = example/geometry/geometry3.c

LINT_CSOURCES += $(example_geometry_p8est_geometry_SOURCES)
endif
